--- a/app/src/main/res/layout/room_main_layout.xml
+++ b/app/src/main/res/layout/room_main_layout.xml
@@ -65,4 +65,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49" />
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        tools:layout_editor_absoluteX="393dp"
+        tools:layout_editor_absoluteY="299dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
